--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <div class="hero-text" style="text-align:center;padding:50px 20px;">
       <h2 style="margin:0 0 8px 0;">Expert Movers for Homes & Offices</h2>
       <p style="margin:0 0 8px 0;">On-time. Careful. Affordable. Serving the Tri-State area — Local moves or interstate labor-only moves (customer provides the vehicle)</p>
-      <p style="margin:0 0 24px 0;font-weight:bold;font-size:16px;">Call Us Today: (555) 123-4567</p>
+      <a href="tel:+1(732) 474-6364" style="color: #0066cc; font-weight: bold; text-decoration: none;">
+         Call or Text: (732) 474-6364
+        </a>
 
       <div style="margin-top:30px;">
         <p style="font-size:16px;font-weight:bold;margin-bottom:16px;color:#228B22;">
