--- a/service_pages/checkout.html
+++ b/service_pages/checkout.html
@@ -81,6 +81,9 @@
     <label for="cardholder-name">Cardholder Name</label>
     <input type="text" id="cardholder-name" required>
 
+    <label for="cardholder-name">Cardholder Email</label>
+    <input type="text" id="cardholder-email" required>
+
     <label for="card-element">Card Details</label>
     <div id="card-element"></div>
     <div id="card-errors" role="alert"></div>
