Update service pages and scripts

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
       <div style="margin-top:30px;">
         <p style="font-size:16px;font-weight:bold;margin-bottom:16px;color:#228B22;">
-          <span style="font-size:20px;font-weight:bold;color:#228B22;">Choose a moving service:</span>
+          <span style="font-size:20px;font-weight:bold;color:#228B22;">Choose a service:</span>
         </p>
         <div style="display:flex;gap:15px;justify-content:center;flex-wrap:wrap;">
-          <a href="#moving-services" style="background-color:#ffcc00;padding:12px 20px;color:#228B22;border-radius:5px;text-decoration:none;font-weight:bold;">View Services</a>
-          <a href="#quote" style="background-color:#ffcc00;padding:12px 20px;color:#228B22;border-radius:5px;text-decoration:none;font-weight:bold;">Get a Quote</a>
+          <a href="#moving-services" style="background-color:#ffcc00;padding:12px 20px;color:#228B22;border-radius:5px;text-decoration:none;font-weight:bold;">Moving</a>
+          <a href="#cleanout-services" style="background-color:#ffcc00;padding:12px 20px;color:#228B22;border-radius:5px;text-decoration:none;font-weight:bold;">Cleanouts</a>
         </div>
       </div>
     </div>
@@ -84,15 +84,111 @@
         <h3>Specialty Item Moving</h3>
         <p>Pianos, safes, antiques, and high-value items with extra protection.</p>
       </div>
+
+      <div class="service-card" id="junk-removal" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+      <h3>Junk Removal</h3>
+      <p>Single items to full cleanouts; loading, haul-away, and responsible disposal.</p>
+      </div>
+
+      <div class="service-card" id="furniture-delivery" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+      <h3>Furniture Delivery</h3>
+      <p>Store-to-home or home-to-home delivery with blanket wrap and room placement.</p>
+      </div>
+
+      <div class="service-card" id="event-equipment-delivery" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+      <h3>Event &amp; Equipment Delivery</h3>
+      <p>Pickup, staging, and timed drop-offs for events, trade shows, and rentals.</p>
+      </div>
+
+      <div class="service-card" id="furniture-assembly" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+      <h3>Furniture Assembly</h3>
+      <p>Flat-pack builds, disassembly/reassembly, hardware included, neat cleanup.</p>
+      </div>
+
+     <div class="service-card" id="local-delivery" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+     <h3>Local Delivery</h3>
+     <p>Same-day point-to-point deliveries for boxes, small freight, and parcels.</p>
+     </div>
+
+     <div class="service-card" id="hauling" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+     <h3>Hauling</h3>
+     <p>Pallets, materials, and bulk loads moved safely with load securement.</p>
+     </div>
+
+     <div class="service-card" id="storage" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+     <h3>Storage</h3>
+     <p>Short-term holding, overnight storage, and coordinated unit drop-off.</p>
+     </div>
+
     </div>
   </section>
 
-  <!-- Quote CTA -->
-  <section id="quote" style="padding:40px 20px;text-align:center;background:#f7fff7;border-top:1px solid #e6ffe6;border-bottom:1px solid #e6ffe6;">
-    <h3 style="margin:0 0 8px 0;color:#228B22;">Ready to move?</h3>
-    <p style="margin:0 0 16px 0;">Tell us what you need and get a fast, guaranteed estimate.</p>
-    <a href="#" style="display:inline-block;background:#228B22;color:#fff;text-decoration:none;padding:12px 20px;border-radius:6px;font-weight:600;">Start Your Quote</a>
-  </section>
+<section id="cleanout-services" class="service-section" style="padding:60px 20px;">
+    <h2 style="text-align:center;font-size:28px;margin-bottom:40px;color:#228B22;">Cleanout Services</h2>
+    <div class="service-cards" style="display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:16px;">
+
+<div class="service-card" id="attic-cleanout" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+  <h3>Attic Cleanout</h3>
+  <p>Declutter and clear storage areas, removing old boxes, junk, and debris.</p>
+</div>
+
+<div class="service-card" id="basement-cleanout" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+  <h3>Basement Cleanout</h3>
+  <p>Clear unwanted items, old furniture, and junk from basements of any size.</p>
+</div>
+
+<div class="service-card" id="garage-cleanout" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+  <h3>Garage Cleanout</h3>
+  <p>Organize and remove clutter, making space for vehicles and storage use.</p>
+</div>
+
+<div class="service-card" id="storage-unit-cleanout" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+  <h3>Storage Unit Cleanout</h3>
+  <p>Quick, efficient clearing of storage units with hauling and disposal.</p>
+</div>
+
+<div class="service-card" id="hoarder-cleanout" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+  <h3>Hoarder Cleanout</h3>
+  <p>Compassionate and thorough removal of clutter in hoarding situations.</p>
+</div>
+
+<div class="service-card" id="estate-cleanout" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+  <h3>Full Estate Cleanout</h3>
+  <p>Complete property clearing including furniture, appliances, and junk.</p>
+</div>
+
+<div class="service-card" id="office-cleanout" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+  <h3>Office Cleanout</h3>
+  <p>Remove old desks, chairs, electronics, and bulk office items efficiently.</p>
+</div>
+
+<div class="service-card" id="shed-deck-cleanout" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+  <h3>Shed &amp; Deck Cleanout</h3>
+  <p>Clean out sheds, patios, and outdoor decks, hauling away all debris.</p>
+</div>
+
+<div class="service-card" id="renovation-debris" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+  <h3>Renovation Debris Removal</h3>
+  <p>Haul away remodeling waste including drywall, wood, and construction debris.</p>
+</div>
+
+<div class="service-card" id="post-construction" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+  <h3>Post-Construction Cleanup</h3>
+  <p>Dust, debris, and leftover material cleared after new builds or renovations.</p>
+</div>
+
+<div class="service-card" id="foreclosure-cleanout" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+  <h3>Foreclosure Cleanout</h3>
+  <p>Fast clearing of foreclosed homes for resale or property management.</p>
+</div>
+
+<div class="service-card" id="eviction-cleanout" style="border:1px solid #e6e6e6;border-radius:8px;padding:16px;">
+  <h3>Eviction Cleanout</h3>
+  <p>Remove belongings and debris after tenant move-outs or evictions.</p>
+</div>
+
+</section>
+
 
   <!-- Scripts -->
   <script src="COMPONENTS/scroll.js"></script>
