--- a/service_pages/checkout.html
+++ b/service_pages/checkout.html
@@ -91,7 +91,7 @@
 <div style="margin: 15px 0;">
   <label for="disclaimer" style="cursor:pointer;">
     <input type="checkbox" id="disclaimer" disabled required style="vertical-align: middle; margin-right: 8px;">
-    I have read and agree to the <a href="/terms" target="_blank" id="terms-link">terms of service</a>.
+    I have read and agree to the <a href="/service_pages/terms.html" target="_blank" id="terms-link">terms of service</a>.
   </label>
 </div>
 <script>
